tests/invalid/trait/assoc_extra.facet
trait Marker {}

struct Counter {
  value: unrestricted isize
}

impl Marker for unrestricted Counter {
  type Item = isize;
}

fn main() -> unrestricted () {
  ()
}
